--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ background: rgba(0,0,0,0.3);
 border-bottom: 1px solid black;
 }
 nav li{
-float: left;
+float: center;
 }
 
 nav li a{
 display: block;
-color: white;
+color: black;
 text-align: center;
 padding: 14px 16px;
 text-decoration: none;
@@ -32,12 +32,12 @@ font-family: 'Alegreya';
 }
 
 nav li a:hover{
-background:  #66d9ff;
-color: #333;
+background:  #324aa8;
+color: white;
 }
 
 nav li a:active{
-color: lightred;
+color: #ffc60d;
 }
 /*Sticky code found online*/
 .sticky {
@@ -52,11 +52,20 @@ z-index: 3;
 #navActive{
 color: red;
 }
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+#content-wrap {
+  padding-bottom: 150px;    /* Footer height */
+}
 footer{
 width: 100%;
 height: 150px;
 text-align: center;
-background: linear-gradient(to right, #66d9ff, #cc0000);
+position: absolute;
+bottom: 0;
+background: linear-gradient(to right, #324aa8, #ffc60d);
 padding: 10px;
 float: clear;
 }
@@ -69,7 +78,7 @@ color: white;
 text-decoration: underline;
 }
 .name{
-font-family: 'Dancing Script', cursive;
+
 }
 .hidden{
 display: none;
