--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ background: rgba(0,0,0,0.3);
 border-bottom: 1px solid black;
 }
 nav li{
-float: center;
+float: left;
 }
 
 nav li a{
@@ -39,18 +39,10 @@ color: white;
 nav li a:active{
 color: #ffc60d;
 }
-/*Sticky code found online*/
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-z-index: 3;
-}
-.sticky + .content {
-  padding-top: 60px;
-}
+
 #navActive{
-color: red;
+color: #ffc60d;
+background: #1d2b61;
 }
 #page-container {
   position: relative;
@@ -58,6 +50,8 @@ color: red;
 }
 #content-wrap {
   padding-bottom: 150px;    /* Footer height */
+  padding-right: 50px;
+  padding-left: 50px;
 }
 footer{
 width: 100%;
@@ -65,7 +59,7 @@ height: 150px;
 text-align: center;
 position: absolute;
 bottom: 0;
-background: linear-gradient(to right, #324aa8, #ffc60d);
+background: linear-gradient(to right, #1d2b61, #ffc60d);
 padding: 10px;
 float: clear;
 }
