--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ transition: background 0.25s, color 0.15s;
 font-family: 'Alegreya';
 }
 
+nav li a:link{
+color: white;
+}
+
 nav li a:hover{
 background:  #324aa8;
 color: white;
@@ -72,18 +76,18 @@ background: #1d2b61;
   min-height: 100vh;
 }
 #content-wrap {
-  padding-bottom: 100px;    /* Footer height */
+  padding-bottom: 125px;    /* Footer height */
   padding-left: 50px;
   padding-right: 50px;
 }
 footer{
 width: 100%;
-height: 75px;
+height: 100px;
 text-align: center;
 position: absolute;
 bottom: 0;
 background: #1d2b61;
-padding-top: 20px;
+padding-top: 10px;
 padding-bottom: 20px;
 float: clear;
 }
